--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-
 *.aux
 *.blg
-Proposal/proposal.bbl
 *.log
 *.out
 *.gz
-Proposal/proposal.toc
-Proposal/proposal.pdf
-Proposal/proposal.pdf
-*.pdf
+Proposal/proposal.lof
+Proposal/proposal.lot
 Proposal/proposal.pdf
